[package]
name = "povorot-web-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
chrono = "0.4.19"
hyper = { version = "0.14.16", features = ["full"]}
redis = { version = "0.21.4", features = ["tokio-comp"]}
serde = {version = "1.0.133", features = ["derive"]}
tokio = { version = "1.15.0", features = ["full"]}
tower = "0.4.11"
serde_json = "1.0"
lapin = "1.9.0"
